# shad-serializer-python

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: test.yml
docs/: api.md  feature-support.md  protocol.md
examples/: account_chat.py  basic_usage.py  login.py
src/shad_client/: __init__.py  client.py  protocol.py
src/shad_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_account_chat.py  test_client.py
