[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "shad-client"
version = "0.1.0"
description = "Unofficial synchronous Python client for Shad Messenger"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "shad-client contributors" },
]
keywords = ["shad", "messenger", "iranlms", "client"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "cryptography>=42",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shad_client = ["py.typed"]
